refactored, started db work

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "ejs": "^1.0.0",
+    "ejs-locals": "^1.0.2",
     "express": "^4.10.6",
     "pg": "^4.1.1"
   },
