--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ejs": "^1.0.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.10.6",
-    "pg": "^4.1.1"
+    "express-session": "^1.10.1",
+    "pg": "^4.1.1",
+    "session": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
