--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "marked": "^0.3.3",
     "npm": "^1.5.0-alpha-4",
     "pg": "^4.3.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {},
   "engines": {
