Marked v0.3.5 has some issuies with headlines, so fixing at marked v0.3.3 (need switch later to markdown-it e.g.)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
-    "marked": "^0.3.3",
+    "marked": "0.3.3",
     "npm": "^1.5.0-alpha-4",
     "pg": "^4.3.0",
     "session": "^0.1.0",
